--- a/Dallas_Touch_Memory_Verifyer/Dallas_Touch_Memory_Verifyer.csproj
+++ b/Dallas_Touch_Memory_Verifyer/Dallas_Touch_Memory_Verifyer.csproj
@@ -4,6 +4,15 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <StartupObject>Dallas_Touch_Memory_Verifyer.App</StartupObject>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
+	
+	<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
 
 </Project>
